Helm_TodoAppMicro_Services/TodoApplicationUI/Maniests/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prod-ui
  template:
    metadata:
      labels:
        app: prod-ui
    spec:
      containers:
      - name: prod-ui
        image: todoappcontainer.azurecr.io/ui:latest
        ports:
        - containerPort: 80
