Helm_TodoAppMicro_Services/TodoApplicationUI/Maniests/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-ui
spec:
  selector:
    app: prod-ui
  ports:
  - port: 80
    targetPort: 80
